Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-674

proton-c: Messenger doesn't provide a way of setting the TTL on a subscription

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.7
    • proton-0.8
    • proton-c
    • None

    Description

      Messenger doesn't provide a way of setting ttl on a subscription. We want to be able to specify the timeout of a given subscription link when we open it.

      Patches attached to add pn_messenger_subscribe_ttl call.

      Attachments

        Activity

          People

            rhs Rafael H. Schloming
            dnwe Dominic Evans
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: