PROTON-674: patch from dominic for setting ttl on a subscription

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1626288 13f79535-47bb-0310-9956-ffa450edef68